# solana-staking-platform

./: .gitignore  Anchor.toml  COMPREHENSIVE_REVIEW.md  EXTRA_REVIEW.md  FINAL_STATUS.md  FIXES_SUMMARY.md  README.md  check_db.js  current-idl.json  package-lock.json  package.json  project_data.json  staking-idl.json  tsconfig.json
anchor/: Anchor.toml  Cargo.toml  rust-toolchain.toml
anchor/programs/staking/: Cargo.toml
anchor/programs/staking/src/: lib.rs  lib.rs.backup
anchor/tests/: staking.ts
data/: current_logfiles  postgresql.conf  postmaster.opts  postmaster.pid
data/global/: 1260  1262  1262_vm  2396  2397  2671  2672  config_exec_params  pg_control
server/: .env  .env.example  package.json  pnpm-lock.yaml
server/prisma/: schema.prisma
server/src/: auth.ts  server.ts
staking-program/: Anchor.toml  check-admin.js  decode_project.py  fetched-idl.json  fetched-mainnet-idl.json  find_platform.js  reset-reflection-state.ts  test.json  verified.json
staking-program/programs/staking-program/: Cargo.toml
staking-program/programs/staking-program/src/: lib.rs
staking-program/scripts/: update-fee-collector.ts
web/: .env  add-reflections-to-vault.ts  build-complete-idl.js  check-pool-idl.js  check-reflection-mint.ts  check-vault-history.ts  fetch-idl.js  fix-duplicate-accounts.js  fix-idl.js  init-lottery.ts  instrumentation.ts  keypair.json  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  update-pool-fixed.ts  update-pool.js  update-reflection-symbol.js  vercel.json
(+451 files in other folders)
